PyMaker/datas/object2/RawHTML/i10901/Python_DOC_referPages.python-3-4-syntax-errors-from-using-print-function.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/826948/syntax-error-on-print-with-python-3">Syntax error on print with Python 3 [duplicate]</a>
<span class="question-originals-answer-count">
                    9 answers
                </span>
</li>
</ul>
</div>
<p>I'm running files obtained from the web in my desktop's Python 3.4 install, and getting syntax errors, such as:</p>
<pre><code>class MyClient(IBCpp.IBClient):
  def setup(self):
    self.stime=None
    self.nextId=0
#        self.symbol='STK.AAPL'
#        self.symbol='CASH.EUR.USD'
    self.symbol='FUT.ES.USD.201506'

    self.state='first'
</code></pre>
<p>skipping a few defs which aren't pre-requisite, there's:</p>
<pre><code> def orderStatus(self,orderId, status, filled, remaining, avgFillPrice,
 permId, parentId, lastFillPrice, clientId, whyHeld):
    """
    call back function of IB C++ API which update status or certain order
    indicated by orderId
    """
    print self.symbol, status, 'filled=',filled, 'remaining=', remaining'
</code></pre>
<p>for which the interpreter responds</p>
<pre><code>print self.symbol, status, 'filled=',filled, 'remaining=', remaining
         ^
SyntaxError: invalid syntax
</code></pre>
<p>Is this perhaps due to a difference of 2.7 vs 3.4? I'm not sure what version the source file was created in. Source is from <a href="https://github.com/IBridgePy" rel="nofollow">IBridgePy github repo</a></p>
</div>
<div class="post-text" itemprop="text">
<p><a href="https://docs.python.org/3/tutorial/inputoutput.html" rel="nofollow">Check the Python 3 docs.</a></p>
<p>Python 3 uses <code>()</code> around the print contents - <code>print ('python')</code></p>
</div>
<span class="comment-copy">As of Python 3, <code>print</code> is now a function. Use <code>print()</code> like this: <code>print('hello world')</code>.</span>
